--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -9,6 +9,25 @@
       <div id="messageText"></div>
       <p id="sajio">Aosjkp dsoja</p>
       <img id="im" src="http://latex.codecogs.com/svg.latex?\forall \Box : \, \Box = \Box">
+      <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h2>Modal Header</h2>
+      </div>
+      <div class="modal-body" id="modalbody">
+        <p>Some text in the Modal Body</p>
+        <p>Some other text...</p>
+      </div>
+      <div class="modal-footer">
+        <h3>Modal Footer</h3>
+      </div>
+    </div>
+
+  </div>
+
   </body>
   <script src="sas.js"></script>
   <script src="formula.js"></script>
