--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -31,6 +31,7 @@
   </body>
   <script src="sas.js"></script>
   <script src="formula.js"></script>
+  <script src="formulabuilder.js"></script>
   <script src="test.js"></script>
   <script src="ksoakd.js"></script>
 </html>
