--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -28,7 +28,8 @@
   </body>
   <script src="sas.js"></script>
   <script src="formula.js"></script>
-  <script src="test.js"></script>
+  <script src="debug.js"></script>
   <script src="formulabuilder.js"></script>
   <script src="ksoakd.js"></script>
+  <script src="test.js"></script>
 </html>
