--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -28,6 +28,7 @@
   </body>
   <script src="sas.js"></script>
   <script src="formula.js"></script>
+  <script src="proof.js"></script>
   <script src="debug.js"></script>
   <script src="formulabuilder.js"></script>
   <script src="ksoakd.js"></script>
