--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -5,7 +5,8 @@
    <link rel="stylesheet" type="text/css" href="asjio.css">
 </head>
   <body>
-      <input type="button" value="display Message" onclick="displayMessage();" />
+      <input type="button" value="Cheat add" onclick="cheat_add_formula();" />
+      <input type="button" value="Assumption" onclick="Proof.make_assumption();" />
       <div id="messageText"></div>
       <p id="sajio">Aosjkp dsoja</p>
       <div id="formula-builder">
