--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div id="formula-builder-footer">
-        <img id="img-result" src="http://latex.codecogs.com/svg.latex?\Box">
+        <div id="result">asdfafasfdasfd</div>
         <button id="button-clear" disabled="">clear</button>
         <button id="button-backspace" disabled="">backspace</button>
         <button id="button-done" disabled="">done</button>
