--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -61,7 +61,6 @@
 <script src="proof.js"></script>
 <script src="debug.js"></script>
 <script src="formulabuilder.js"></script>
-<script src="ksoakd.js"></script>
-<script src="test.js"></script>
+<script src="proof_pane.js"></script>
 
 </html>
