--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -46,6 +46,9 @@
         <div id="loc">
           <h1>locals</h1>
         </div>
+        <div id="arg">
+          <h1>arguments</h1>
+        </div>
       </div>
       <div id="formula-builder-footer">
         <div id="result">asdfafasfdasfd</div>
