--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -14,7 +14,8 @@
   <div id="main">
     <div id="proof-pane">
       <input type="button" value="Cheat add" onclick="cheat_add_formula();" />
-      <input type="button" value="Assumption" onclick="Proof.make_assumption();" />
+      <img id="assumption" src="img\assumption.svg" onclick="Proof.make_assumption();" >
+      <img id="delete" src="img\delete.svg">
     </div>
     <div id="theorem-pane">
     </div>
