--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -66,5 +66,5 @@
 <script src="debug.js"></script>
 <script src="formulabuilder.js"></script>
 <script src="proof_pane.js"></script>
-
+<!--<script src="test.js"></script>-->
 </html>
