--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -63,10 +63,11 @@
     <div id="formula-selector-content" class="modal-content">
       <div id="formula-selector-header" class="modal-header">
         <span class="close">×</span>
-        <h2>pjoaa</h2>
+        <h2>Select formula</h2>
       </div>
       <div id="formula-selector-body" class="modal-body">
-        <div id="a">globals</div>
+        <div id="left-to-right"><h1>left-to-right</h1></div>
+        <div id="right-to-left"><h1>right-to-left</h1></div>
       </div>
       <div id="formula-selector-footer" class="modal-footer">
       </div>
