--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -80,6 +80,7 @@
 <script src="debug.js"></script>
 <script src="formulabuilder.js"></script>
 <script src="proof_pane.js"></script>
+<script src="io.js"></script>
 <!--<script src="test.js"></script>-->
 
 </html>
