--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -41,8 +41,11 @@
         <div id="exp">
           <h1>expressions</h1>
         </div>
-        <div id="var">
-          <h1>variables</h1>
+        <div id="var-cont">
+          <div id="var">
+            <h1>variables</h1>
+          </div>
+          <input id="more-var-btn" type="button" value="More" />
         </div>
         <div id="loc">
           <h1>locals</h1>
