--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -128,6 +128,7 @@
         <h1>theorem</h1>
         <h1>folder</h1>
         <h1>hidden</h1>
+        <h1>delete</h1>
         <h1>create definition</h1>
       </div>
       <div id="theorem-manager-footer" class="modal-footer">
