--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -14,7 +14,7 @@
 
   <div id="main">
     <div id="proof-pane">
-      <input type="button" value="Cheat add" onclick="cheat_add_formula();" style="display:none"/>
+      <input type="button" value="Cheat add" onclick="cheat_add_formula();" style="display:none" />
       <input type="button" value="Save" onclick="TheoremPane.save_request();" />
       <input type="button" value="New def" onclick="NewDefWindow.show();" />
       <input type="button" value="Theorem manager" onclick="TheoremManager.show();" />
@@ -97,20 +97,36 @@
         <h2>New definition</h2>
       </div>
       <div id="new-def-body" class="modal-body">
-        Type:
-        <select id="def-type">
+        <div>
+          Type:
+          <select id="def-type">
           <option value="rel" selected>Relation</option>
           <option value="exp">Expression</option>
-        </select> Number of arguments:
-        <select id="no-of-args">
+        </select>
+        </div>
+        <div>
+          Number of arguments:
+          <select id="no-of-args">
           <option value="0" selected>0</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
-        </select> Print scheme:
-        <input id="print-scheme" type="text" value="" />
+        </select>
+        </div>
+        <div>
+          Print scheme:
+          <input id="print-scheme" type="text" value="" />
+        </div>
+        <div id="def-scope">
+          <input type="radio" name="scope" value="global" checked> Global<br>
+          <input type="radio" name="scope" value="local"> Local (for theorem schemas)<br>
+        </div>
         <input id="give-def" type="button" value="Give definition" />
-        <div id="def-formula"></div>
+
+        <div>
+          Preview
+          <div id="def-formula"></div>
+        </div>
         <input id="def-done" type="button" value="Done" />
       </div>
       <div id="new-def-footer" class="modal-footer">
