--- a/oaisjd.htm
+++ b/oaisjd.htm
@@ -80,10 +80,7 @@
         <h2>Select formula</h2>
       </div>
       <div id="formula-selector-body" class="modal-body">
-        <div id="left-to-right">
-          <h1>left-to-right</h1></div>
-        <div id="right-to-left">
-          <h1>right-to-left</h1></div>
+
       </div>
       <div id="formula-selector-footer" class="modal-footer">
       </div>
@@ -145,7 +142,7 @@
         <h1>folder</h1>
         <h1>hidden</h1>
         <h1>delete</h1>
-        <h1>create definition</h1>
+        <h1>create def</h1>
       </div>
       <div id="theorem-manager-footer" class="modal-footer">
         <button id="th-man-cancel">cancel</button>
